icon fix on mobile

--- a/src/styles/searchbar.scss
+++ b/src/styles/searchbar.scss
@@ -60,6 +60,7 @@
             }
             .icon{
                 width: 6%;
+                height: 3rem;
                 svg{
                     width: 110%;
                     height: 105%;
